# TestWise

./: .dockerignore  .gitignore  README.md  index.html  package-lock.json  package.json  start-testwise.ps1
Backend/: .dockerignore  .env.dev  .env.prod  .gitignore  Dockerfile  README.markdown  docker-compose.yml  pyproject.toml  requirements.txt
Backend/src/: create_admin.py  database.sqlite  main.py
Backend/src/api/: __init__.py
Backend/src/api/v1/: __init__.py
Backend/src/api/v1/auth/: __init__.py  routes.py  schemas.py
Backend/src/api/v1/groups/: __init__.py  routes.py  schemas.py
Backend/src/api/v1/profile/: __init__.py  routes.py  schemas.py
Backend/src/api/v1/progress/: __init__.py  routes.py  schemas.py
Backend/src/api/v1/questions/: __init__.py  routes.py  schemas.py
Backend/src/api/v1/sections/: __init__.py  routes.py  schemas.py
Backend/src/api/v1/subsections/: __init__.py  routes.py  schemas.py
Backend/src/api/v1/tests/: __init__.py  routes.py  schemas.py
Backend/src/api/v1/topics/: __init__.py  routes.py  schemas.py
Backend/src/api/v1/users/: __init__.py  routes.py  schemas.py
Backend/src/config/: logger.py  settings.py
Backend/src/core/: config.py  crud.py  logger.py  progress.py  security.py  tests.py
Backend/src/database/: backup.py  db.py  models.py
Backend/src/domain/: enums.py  models.py
Backend/src/repository/: __init__.py  base.py  group.py  progress.py  question.py  test.py  topic.py  user.py
Backend/src/security/: security.py
Backend/src/service/: progress.py  tests.py
Backend/src/utils/: exceptions.py
(+132 files in other folders)
